style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

:root{
    --black: #121212;
    --dark-grey: #151b22;
    --grey-bg: #313942;
    --header-shadow-color: #4c5258;
    --box-shadow-color: #b1b1b1;
    --white: #ffffff;
    --green: #318b86;
    --red: #d44a68;
    --light-grey: #bac5c8;
    --grey: #788794;
    --dark-red: #c5415e;
    --dark-green:#2d7d79;
}

html, body{
    background: var(--black);
    color: #FFF;
    font-family: Geneva, Verdana, sans-serif;
}

body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    z-index: 3;
}

header {
    flex: 0;
    padding: 2rem 7%;
    background-color: var(--grey-bg);
    box-shadow: 0 0.2rem 0.7rem 0.2rem var(--header-shadow-color);
    align-items: center;
}

h1 {
    font-weight: 500;
}

main {
    padding: 1rem 7%;
    flex: 1;
    justify-self: flex-start;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

footer{
    flex-shrink: 0;
    text-align: center;
    font-size: 0.8rem;
    margin: 1rem;
}

.stat {
    display: flex;
    gap: 1.5rem;
    font-size: 1rem;
}

.form-window {
    display: none;
    z-index: 1;
    position: fixed;
    left: 50%;
    top: 50%;
    margin-top: -12rem;
    margin-left: -15rem;
    width: 30rem;
    height: max-content;
    background-color: var(--dark-grey);
    padding: 2rem;
    flex-direction: column;
    gap: 1rem;
    align-items: center;
    border-radius: 0.4rem;
    box-shadow: 0 0 0.4rem 0.3rem var(--header-shadow-color);
}

.book-form {
    display: flex;
    flex-direction: column;
    gap: 2rem;
    font-size: 1.1rem;
}

.form-window h2 {
    text-align: center;
    margin-bottom: 0.5rem;
}

.form-window label:not([for="read"]):not([for="unread"]),
.form-window p {
    display: block;
    width: 8rem;
}

.form-window label[for="read"],
.form-window label[for="unread"] {
    width: 3rem;
}

.form-field {
    display: flex;
    align-items: center;
}

.form-field input[type="radio"] {
    margin-right: 0.5rem;
    border: none;
}

.form-field input[type="text"],
.form-field input[type="number"] {
    flex: 1 1 auto;
    height: 1.8rem;
    border-radius: 0.4rem;
    padding: 0.5rem;
    font-size: 1rem;
    border: none;
}

.book-form .actions {
    display: flex;
    gap: 1rem;
}

.book-form .actions button {
    height: 2.5rem;
    width: 10rem;
    font-size: 1rem;
    background-color: var(--white);
    color: var(--black);
    align-self: center;
}

#confirm-btn:hover {
    background-color: var(--green);
    color: var(--white);
}

#cancel-btn:hover {
    background-color: var(--red);
    color: var(--white);
}

.book-container {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
    grid-auto-rows: minmax(auto, 1fr);
    gap: 1.2vw;
    border-radius: 0.4rem;
    overflow: auto;
}

.book {
    background-color: var(--grey-bg);
    border-radius: 0.4rem;
    display: flex;
    flex-direction: column;
    overflow: auto;
    padding: 1rem 0;
    gap: 1rem;
    position: relative;
    top: 0;
    transition: top ease 0.5s;
}

.book:hover {
    top: -0.1rem;
    box-shadow: 0 0 0.5rem 0.1rem var(--box-shadow-color);
}

.book-info, .book-action {
    align-self: center;
    min-width: 80%;
    text-align: center;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.book-action button{
    background-color: var(--white);
    color: var(--black);
    width: 100%;
    height: 2.5rem;
    font-size: 1rem;
}

.remove:hover {
    background-color: var(--light-grey);
}

.book-action .read.true {
    background-color: var(--green);
    color: var(--white);
}

.book-action .read.true:hover {
    background-color: var(--dark-green);
}

.book-action .read.false {
    background-color: var(--red);
    color: var(--white);
}

.book-action .read.false:hover {
    background-color: var(--dark-red);
}

.actions {
    align-self: center;
}

.actions button {
    background-color: var(--black);
    color: var(--white);
    font-size: 1.5rem;
    width: 10rem;
    height: 3rem;
}

.actions button:hover {
    background-color: var(--green);
}

button {
    border: none;
    border-radius: 0.4rem;
}

#overlay {
    display: none;
    position: fixed;
    width: 100%;
    height: 100%;
    background-color: var(--black);
    opacity: 0.5;
    z-index: 1;
}

.error-msg .error {
    display: none;
    color: var(--red);
    font-size: 0.8rem;
    width: 100%;
    margin-top: 0.5rem;
    margin-left: 8rem;
}

.form-field input.error {
    border: 0.1rem solid var(--red);
}

